# cgal-test

./: .gitignore  CMakeLists.txt  skel_example.cpp
